# mephi_lab1

./: CMakeLists.txt  TypeInfoComplex.c  TypeInfoDouble.c  Vector.c  main.c
H_files/: TypeInfo.h  TypeInfoComplex.h  TypeInfoDouble.h  Vector.h
tests/: test.c  testTypeInfoComplex.h  testTypeInfoDouble.c  testTypeInfoDouble.h  testVector.c  testVector.h  textTypeInfoComplex.c
